# tradefox

./: .gitignore  Makefile  README.md  go.mod  go.sum  notify-on-done.sh
cmd/backfill/: main.go
cmd/backtest/: main.go
cmd/server/: main.go
cmd/simulator/: main.go
cmd/tradefox/: main.go
cmd/validate/: main.go
cmd/walkforward/: main.go
internal/api/: server.go
internal/backfill/: checkpoint.go  checkpoint_test.go  client.go  client_test.go  fetcher_test.go  funding_fetcher.go  kline_fetcher.go  oi_fetcher.go  orchestrator.go  trade_fetcher.go  types.go
internal/backtest/: atr.go  atr_test.go  engine.go  engine_test.go  execution.go  execution_test.go  overfit.go  overfit_test.go  pnl.go  pnl_test.go  position.go  position_test.go  signal_feed.go  signal_feed_test.go  strategy.go  strategy_test.go
internal/config/: settings.go  settings_test.go
internal/connector/: base.go  base_test.go  stale_detector.go  stale_detector_test.go
internal/eventbus/: bus.go  bus_test.go
internal/execution/: executor.go  executor_test.go  preset.go  preset_test.go  risk.go  risk_test.go
internal/kiyotaka/: client.go  client_test.go  poller.go  poller_test.go  types.go
internal/liquidation/: calculator.go  calculator_test.go  (+5 more)
nautilus/: __main__.py  bridge_servicer.py  config.py  pyproject.toml  requirements.txt  server.py
nautilus/data/: catalog.py  importers.py  instruments.py
nautilus/proto/: nautilus.proto  nautilus_pb2.py  nautilus_pb2_grpc.py
nautilus/risk/: guardian.py
nautilus/strategies/: base.py  day_fvg.py  scalp_absorption.py  swing_liquidity.py
(+195 files in other folders)
